Fixed Confirm Transaction Page

--- a/confirm-transaction.html
+++ b/confirm-transaction.html
@@ -124,10 +124,10 @@
 					</div>
 					<div class = "col-lg-5 col-lg-offset-1 product-details vcenter">					
 						<div class = "row">
-							<h6 class="text-space"><b>Shipping Address</b></h6>
-							<input type="text" name="shipadd" disabled="true" class="text-fld col-lg-10 disabled" value="21 A Bonifacio St. Sayaman Cmpd">
+							<h6 class="text-space"><b>Full Name</b></h6>
+							<input type="text" name="shipadd" disabled="true" class="text-fld col-lg-10 disabled" value="Ivan Kwok">
 						</div>
-						<div class = "row"
+						<div class = "row">
 							<h6 class="text-space"><b>Shipping Address</b></h6>
 							<input type="text" name="shipadd" disabled="true" class="text-fld col-lg-10 disabled" value="21 A Bonifacio St. Sayaman Cmpd">
 						</div>
@@ -142,12 +142,14 @@
 					</div>
 				</div>
 				<div class = "row">
+					</br>
 					<div class="centered">
 						<input type="submit" name="login" class="btn btn-lg transact-btn" value="CONFIRM">
 					</div>
+					</br>
 				</div>
-			</form>
-		</div>
+			</div>
+		</form>
 
 		<br>
 		<div class="container">
