Fixed Transaction Screen

--- a/transaction.html
+++ b/transaction.html
@@ -108,8 +108,8 @@
 				<div class = "col-lg-6 product-details vcenter">
 					<form>
 						<div class = "row">
-							<h6 class="text-space"><b>Shipping Address</b></h6>
-							<input type="text" name="shipadd" disabled="true" class="text-fld col-lg-10 disabled" value="21 A Bonifacio St. Sayaman Cmpd">
+							<h6 class="text-space"><b>Full Name</b></h6>
+							<input type="text" name="shipadd" disabled="true" class="text-fld col-lg-10 disabled" value="Ivan Kwok">
 						</div>
 						<div class = "row">
 							<h6 class="text-space"><b>Shipping Address</b></h6>
