--- a/products.html
+++ b/products.html
@@ -106,40 +106,21 @@
 			<section id="pinBoot">
 
 				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
+					<div class="row">	
+						<h5>
+							<div class="product-info">
+								<b>Adidas Originals<br>Ultraboost "Core Black"</b><br>PHP 9,995.00
+							</div>
+						</h5>
+					</div>
+					<div class="row">
+						<form>
+							<input type="hidden" name="product-index" id="product-index" value="0"/>
+							<input type="submit" name="product-btn" class="btn btn-lg product-btn" value="VIEW DETAILS">
+						</form>
+					</div>
 				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>
-
-				<article class="white-panel"><img class="pin-image" src="assets\img\ub-coreblack.png" alt="">
-					<h5><a class="panel-link" href="#"><b>Adidas Originals<br>Ultraboost "Core Black"<br>PHP 9,995.00</b></a></h5>
-				</article>		
+													
 
 			</section>
 
