Updated Accounting Manager and Products Page
Changed Product Category Links to Buttons

--- a/accounting-manager.html
+++ b/accounting-manager.html
@@ -98,35 +98,15 @@
 		<form>
 			<div class="container">
 				<div class = "row">
-					<div class = "col-lg-2 col-lg-offset-1">
-						<h4>&nbsp</h4>
-						<div class = "row">
-							<div class="col-lg-10 transact-btn-div">
-								<button class="transact-btn">ALL</button>
-							</div>
-						</div>
-						<div class = "row">
-							<div class="col-lg-10 transact-btn-div">
-								<button class="transact-btn">BOOTS</button>
-							</div>
-						</div>
-						<div class = "row">
-							<div class="col-lg-10 transact-btn-div">
-								<button class="transact-btn">SHOES</button>
-							</div>
-						</div>
-						<div class = "row">
-							<div class="col-lg-10 transact-btn-div">
-								<button class="transact-btn">SANDALS</button>
-							</div>
-						</div>
-						<div class = "row">
-							<div class="col-lg-10 transact-btn-div">
-								<button class="transact-btn">SLIPPERS</button>
-							</div>
-						</div>
-					</div>
-					<div class = "col-lg-8">
+					<button class="product-cat-btn">All</button> -
+					<button class="product-cat-btn">BOOTS</button> - 
+					<button class="product-cat-btn">SHOES</button> - 
+					<button class="product-cat-btn">SANDALS</button> - 
+					<button class="product-cat-btn">SLIPPERS</button>
+				</div>
+				</br>
+				<div class = "row">
+					<div class = "col-lg-8 col-lg-offset-2">
 						<div class = "row">
 							<table class="table">
 								<thead>
