--- a/products.html
+++ b/products.html
@@ -16,6 +16,7 @@
     <link href="assets/css/loginmodal.css" rel="stylesheet">
     <link href="assets/css/register.css" rel="stylesheet">
     <link href="assets/css/pinterest.css" rel="stylesheet">
+    <link href="assets/css/productpage.css" rel="stylesheet">
 	<link rel="stylesheet" href="assets/css/font-awesome-4.6.3/css/font-awesome.min.css">
 	<!-- <link rel="stylesheet" id="font-awesome-css" href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" type="text/css" media="screen"> -->
  
@@ -96,11 +97,11 @@
 
 		<div class="container">
 			<div class = "row">
-				<a class="category-text" href="#">All</a> - 
-				<a class="category-text" href="#">BOOTS</a> - 
-				<a class="category-text" href="#">SHOES</a> - 
-				<a class="category-text" href="#">SANDALS</a> - 
-				<a class="category-text" href="#">SLIPPERS</a>
+				<button class="product-cat-btn">All</button> -
+				<button class="product-cat-btn">BOOTS</button> - 
+				<button class="product-cat-btn">SHOES</button> - 
+				<button class="product-cat-btn">SANDALS</button> - 
+				<button class="product-cat-btn">SLIPPERS</button>
 			</div>
 			</br>
 			<section id="pinBoot">
