Added add product section

--- a/product-manager-products.html
+++ b/product-manager-products.html
@@ -88,6 +88,53 @@
 
 	<!-- ========== CAROUSEL / DESCRIPTION - DARK GREY SECTION ========== -->
 	<div id="w2">
+
+		<div class="container">
+			<div class = "cm-header">
+				<span>ADD NEW PRODUCT</span>
+			</div>
+		</div><!-- /container -->
+		<br>
+
+		<div class="container">
+			<div class = "row">
+				<div class = "col-lg-8 col-lg-offset-2">
+					<div class = "product-details">					
+						<form>
+							<div class = "row">
+								<h6 class="text-space col-lg-offset-1"><b>Name</b></h6>
+								<input type="text" name="shipadd" class="text-fld col-lg-10 col-lg-offset-1" value="Ivan Kwok">
+							</div>
+							<div class = "row">
+								<h6 class="text-space col-lg-offset-1"><b>Category</b></h6>
+								<select class="cust-select col-lg-10 col-lg-offset-1">
+								  <option>Shoes</option>
+								  <option>Slippers</option>
+								  <option>Sandals</option>
+								</select>
+							</div>
+							<div class = "row">
+								<h6 class="text-space col-lg-offset-1"><b>Description</b></h6>
+								<textarea class="cust-area col-lg-10 col-lg-offset-1" rows="5" maxlength="250" placeholder="Product Description"></textarea>
+							</div>
+							<div class = "row">
+								<h6 class="text-space col-lg-offset-1"><b>Unit Price</b></h6>
+								<input type="number" name="shipadd" class="text-fld col-lg-10 col-lg-offset-1" value="9995">
+							</div>
+							<div class = "row">
+							<h6 class="text-space col-lg-offset-1"><b>Quantity</b></h6>
+								<input type="number" name="quantity" class="text-fld col-lg-2 col-lg-offset-1" placeholder="Qty." value="5">
+								<div class="col-lg-3 col-lg-offset-6">
+									<input type="submit" name="login" class="btn btn-lg transact-btn" value="ADD">
+								</div>
+							</div>
+						</form>
+					</div>
+				</div>
+			</div>
+		</div>
+		<br>
+		<br>
 		<div class="container">
 			<div class = "cm-header">
 				<span>EDIT PRODUCTS</span>
