--- a/productpage.html
+++ b/productpage.html
@@ -124,7 +124,21 @@
 							<!-- </div> -->
 						</div>
 
-						<div role="tabpanel" id="b" class="tab-pane fade" >
+						<div role="tabpanel" id="b" class="tab-pane fade">
+							
+							<!-- Remove div if the user hasn't bought the item yet or is not logged in -->
+							<div class="row">
+								<form>
+									<h3><b>Miguel Sietereales</b></h3>
+									<div class = "row">
+										<h6 class="text-space"><b>Review</b></h6>
+										<textarea class="cust-area col-lg-8 col-lg-offset-2" rows="5" maxlength="250" placeholder="Review"></textarea>
+									</div>
+									<input type="submit" name="login" class="btn btn-lg transact-btn" value="POST">
+								</form>
+							</div>
+							<!-- =============================================== -->
+
 							<div class="review-wrapper">
 								<div class="row">
 									<h4><b>Miguel Sietereales</b></h4><h5 class="no-lh no-margin">July 31, 2016</h5>
